--- a/ToDo.Infrastructure/ToDo.Infrastructure.csproj
+++ b/ToDo.Infrastructure/ToDo.Infrastructure.csproj
@@ -8,7 +8,11 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ToDo.Application\ToDo.Application.csproj" />
-      <ProjectReference Include="..\ToDo.Persistece\ToDo.Persistece.csproj" />
+      <ProjectReference Include="..\ToDo.Persistence\ToDo.Persistence.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="11.8.0" />
     </ItemGroup>
 
 </Project>
